--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "DateDrop - Orthodox Jewish Dating App API",
   "main": "backend/src/server.js",
   "scripts": {
-    "start": "cd backend && node src/server.js",
+    "start": "cd backend && npm install && node src/server.js",
     "dev": "cd backend && npm run dev",
     "migrate": "cd backend && npm run migrate",
     "test": "echo \"Error: no test specified\" && exit 1"
