Fix vercel.json: remove invalid secret reference

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,7 +1,4 @@
 {
   "buildCommand": "npm run build",
-  "outputDirectory": "dist",
-  "env": {
-    "REACT_APP_API_URL": "@react_app_api_url"
-  }
+  "outputDirectory": "dist"
 }
