Remove build script from root package.json for backend deployment

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "description": "DateDrop - Orthodox Jewish Dating App",
   "scripts": {
     "install-all": "cd backend && npm install && cd ../frontend && npm install",
-    "dev": "echo 'Use cd backend && npm run dev OR cd frontend && npm run dev'",
-    "build": "cd frontend && npm run build"
+    "dev": "echo 'Use cd backend && npm run dev OR cd frontend && npm run dev'"
   },
   "engines": {
     "node": "18.x"
