--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,5 +21,8 @@
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.2.0",
     "vite": "^5.0.0"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
